crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__deeply_nested_types.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& types.code"
---
import type { Artifact as $Artifact, Nullable as $Nullable, List as $List, FragmentRefs as $FragmentRefs, SchemaMeta as $SchemaMeta } from "mearie/types";
export type $Scalars = {
	ID: string;
	String: string;
	Int: number;
	Float: number;
	Boolean: boolean;
};
export type $Schema = $SchemaMeta<{
	scalars: {};
	entities: {
		Address: {
			keyFields: {
				id: $Scalars["ID"];
			};
			fields: "street" | "city" | "country" | "id";
		};
		User: {
			keyFields: {
				id: $Scalars["ID"];
			};
			fields: "profile" | "name" | "id";
		};
		Profile: {
			keyFields: {
				id: $Scalars["ID"];
			};
			fields: "bio" | "address" | "id";
		};
	};
	queryFields: "user";
}>;
export type RequiredAction = "THROW" | "CASCADE";
export type GetUserAddress$data = {
	user?: $Nullable<{
		profile?: $Nullable<{
			bio?: $Nullable<$Scalars["String"]>;
			address?: $Nullable<{
				street: $Scalars["String"];
				city: $Scalars["String"];
				country: $Scalars["String"];
				id: $Scalars["ID"];
			}>;
			id: $Scalars["ID"];
		}>;
		name: $Scalars["String"];
		id: $Scalars["ID"];
	}>;
};
export type GetUserAddress$vars = {};
export type GetUserAddress = $Artifact<"query", "GetUserAddress", GetUserAddress$data, GetUserAddress$vars>;
