crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__enum_types_runtime.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& runtime.code"
---
export const $GetUsersByRole = {
	name: "GetUsersByRole",
	body: "query GetUsersByRole($role: Role!) {\n  usersByRole(role: $role) {\n    __typename\n    id\n    name\n    role\n  }\n}",
	kind: "query",
	selections: [{
		kind: "Field",
		name: "usersByRole",
		type: "User",
		array: true,
		args: { role: {
			kind: "variable",
			name: "role"
		} },
		selections: [
			{
				kind: "Field",
				name: "__typename"
			},
			{
				kind: "Field",
				name: "id",
				type: "ID"
			},
			{
				kind: "Field",
				name: "name",
				type: "String"
			},
			{
				kind: "Field",
				name: "role",
				type: "Role"
			}
		]
	}],
	variableDefs: [{
		name: "role",
		type: "Role"
	}]
};
export const artifactMap = { "\n            query GetUsersByRole($role: Role!) {\n                usersByRole(role: $role) {\n                    id\n                    name\n                    role\n                }\n            }\n        ": $GetUsersByRole };
export const artifactByName = { "query:GetUsersByRole": $GetUsersByRole };
export const schema = { entities: { "User": { keyFields: ["id"] } } };
export const graphql = (artifact) => artifactMap[artifact];
graphql.query = (name) => artifactByName["query:" + name];
graphql.mutation = (name) => artifactByName["mutation:" + name];
graphql.subscription = (name) => artifactByName["subscription:" + name];
graphql.fragment = (name) => artifactByName["fragment:" + name];
graphql.enum = (value) => value;
